# YoloV5-face-ncnn-RPi4

./: CMakeLists.txt
